--- a/frontend/src/templates/edit.html
+++ b/frontend/src/templates/edit.html
@@ -39,7 +39,7 @@
         </div>
         <div>
           <label class="form-label" for="username" data-i18n="edit.usernameLabel">Nickname</label>
-          <input type="text" id="username" name="username" class="form-input" />
+          <input type="text" id="username" name="username" class="form-input" maxlength="15" />
         </div>
         <button type="submit" class="w-full btn-green" data-i18n="edit.saveButton">Save</button>
       </form>
