--- a/frontend/src/templates/register.html
+++ b/frontend/src/templates/register.html
@@ -34,6 +34,7 @@
             id="username"
             name="username"
             class="form-input"
+            maxlength="15"
             data-i18n-placeholder="register.usernamePlaceholder"
             placeholder="Enter your nickname"
           />
