--- a/frontend/src/templates/home.html
+++ b/frontend/src/templates/home.html
@@ -78,6 +78,11 @@
         Play with Friend
       </button>
     </div>
+    <div class="text-center mb-4">
+      <button id="remote-tournament-btn" class="btn-green w-64" data-i18n="home.onlineTournament">
+        Online Tournament
+      </button>
+    </div>
   </div>
 
   <footer class="max-w-4xl mx-auto mt-auto pt-24 pb-6 px-4">
